hphp/hack/test/typecheck/abstract_typeconsts/redeclare_no_default2.php.exp
File "redeclare_no_default2.php", line 8, characters 23-23:
This abstract type constant does not have a default type (Typing[4320])
File "redeclare_no_default2.php", line 4, characters 23-23:
It cannot override an abstract type constant that has a default type
File "redeclare_no_default2.php", line 11, characters 16-16:
Class C does not correctly implement all required members  (Typing[4340])
File "redeclare_no_default2.php", line 11, characters 26-26:
Some members are incompatible with those declared in type B
Read the following to see why:
File "redeclare_no_default2.php", line 4, characters 23-23:
The constraint on this type constant is inconsistent with its parent
File "redeclare_no_default2.php", line 8, characters 28-33:
Expected string
File "redeclare_no_default2.php", line 4, characters 28-32:
But got mixed
